[package]
name = "intuit-empire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = { version = "0.17.0", features = ["png", "svg", "pdf"] }
clap = { version = "4.2.4", features = ["derive"] }
regex = "1.7.3"
